--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,10 @@ a.navbar-brand {
   color: #ffffff;
 }
 
+#portfolioCard {
+  background-color: #777474;
+}
+
 .img-container {
   margin: 1em;
 }
